Prevent footer from overlapping other content in IE
Footer is no longer sticky in IE

--- a/assets-src/styles/sass/30-base/_body.scss
+++ b/assets-src/styles/sass/30-base/_body.scss
@@ -22,7 +22,6 @@ body {
 	-ms-grid-columns: 100%; /* 3 */
 	grid-template-rows: 1fr auto; /* 1 */
 	-ms-grid-rows: 1fr auto; /* 2 */
-	height: 100%;
 	min-height: 100%;
 	overflow-x: hidden;
 	-moz-osx-font-smoothing: grayscale;
